--- a/motivation.tex
+++ b/motivation.tex
@@ -64,5 +64,9 @@ The integral is computed numerically using a Gauss integration: $x_q$ are Gauss 
 The surface integrals are computed similarly.
 
 
-\section{Density Functional Theory Formulation}
+\section{Density Functional Theory Formulation for Spherically Symmetric
+Problems}
 
+The Kohn-Sham equations (\ref{KSeq}) for spherically symmetric potential reduce
+to radial Schr\"odinger (or Dirac) equations, which we integrate using the
+methods described in the section 1.2.
