--- a/master.tex
+++ b/master.tex
@@ -13,10 +13,12 @@
 \usepackage[left=4cm]{geometry} % nastavení dané velikosti okrajů
 \usepackage{amsmath}
 \usepackage{braket}
+\usepackage{verbatim}
+\usepackage{listings}
 
 %\newindex{default}{idx}{ind}{Rejstřík} % zavádí rejstřík v případě použití balíku index
 
-\title{Název práce}   % tyto dvě položky jsou zde v podstatě formálně, ve skutečnosti nejsou nikde 
+\title{Název práce}   % tyto dvě položky jsou zde v podstatě formálně, ve skutečnosti nejsou nikde
 \author{Jméno autora} % dále v dokumentu použity
 
 %\date{}
