--- a/results.tex
+++ b/results.tex
@@ -92,7 +92,7 @@ n      exact         FEM      error
 Solution saved to mesh.vtk
 \end{lstlisting}
 
-\subsection{2D: Oscillator}
+\subsection{2D: Linear Harmonic Oscillator}
 
 \begin{lstlisting}
 $ ./schroedinger.py --oscillator
@@ -159,14 +159,11 @@ n      exact         FEM      error
 14:  5.00000000   5.01042976   0.21%
 15:  6.00000000   6.01161255   0.19%
 Solution saved to mesh.vtk
-
 \end{lstlisting}
 
-\subsection{2D: Oscillator}
+\subsection{2D: Hydrogen Atom}
 
 \begin{lstlisting}
-hydrogen
-
 $ ./schroedinger.py --hydrogen
 Dimension: 2
 sfepy: left over: ['tau', 'n_eigs', 'mesh', 'quadr', 'dim', 'base_approx']
@@ -225,37 +222,11 @@ n      exact         FEM      error
 8:  -0.01020408   -0.00961296   5.79%
 9:  -0.01020408   -0.00959015   6.02%
 Solution saved to mesh.vtk
-
 \end{lstlisting}
 
-\subsection{2D: Oscillator}
+\subsection{2D: Boron Atom}
 
 \begin{lstlisting}
-Important note: the exact energies are in fact wrong, this was corrected in a211565e85b9. The correct result after the fix is:
-
-$ ./schroedinger.py --hydrogen
-[...]
-Energies:
-n      exact         FEM      error
-0:  -0.50000000   -0.48444312   3.11%
-1:  -0.05555556   -0.05546226   0.17%
-2:  -0.05555556   -0.05490833   1.17%
-3:  -0.05555556   -0.01987759  64.22%
-4:  -0.02000000   -0.01986552   0.67%
-5:  -0.02000000   -0.01978261   1.09%
-6:  -0.02000000   -0.01974034   1.30%
-7:  -0.02000000   -0.01973349   1.33%
-8:  -0.02000000   -0.00961296  51.94%
-9:  -0.01020408   -0.00959015   6.02%
-Solution saved to mesh.vtk
-
-\end{lstlisting}
-
-\subsection{2D: Oscillator}
-
-\begin{lstlisting}
-As you can see, pysparse failed to retrieve the eigenvalue number 3. With a more dense mesh, it works fine for the Boron nucleus with 1 electron:
-
 $ ./schroedinger.py --boron
 [...]
 Energies:
@@ -275,16 +246,11 @@ n      exact         FEM      error
 12:  -0.25510204   -0.25249085   1.02%
 13:  -0.25510204   -0.25242286   1.05%
 Solution saved to mesh.vtk
-
 \end{lstlisting}
 
-\subsection{2D: Oscillator}
+\subsection{3D: Mesh}
 
 \begin{lstlisting}
-3D
-
-Create a 3D mesh (you need tetgen for that -- it is non-free, but you can use it for academic purposes -- if you have a good free 3D mesh generator, please let us know):
-
 $ ./schroedinger.py --mesh
 Dimension: 3
 Info    : 'gmsh -0 database/box.geo -o tmp/x.geo' started on Sat Jul 19 02:08:14 2008
@@ -307,14 +273,11 @@ sfepy: reading mesh (tmp/t.1.node)...
        elements: 100% |#########################################| Time: 00:00:01
 sfepy: ...done in 1.39 s
 Mesh written to tmp/mesh.vtk
-
 \end{lstlisting}
 
-\subsection{2D: Oscillator}
+\subsection{3D: Potential Well}
 
 \begin{lstlisting}
-well
-
 $ ./schroedinger.py --well
 Dimension: 3
 sfepy: left over: ['tau', 'n_eigs', 'mesh', 'quadr', 'dim', 'base_approx']
@@ -388,11 +351,9 @@ Solution saved to mesh.vtk
 
 \end{lstlisting}
 
-\subsection{2D: Oscillator}
+\subsection{3D: Linear Harmonic Oscillator}
 
 \begin{lstlisting}
-oscillator
-
 $ ./schroedinger.py --oscillator
 Dimension: 3
 sfepy: left over: ['tau', 'n_eigs', 'mesh', 'quadr', 'dim', 'base_approx']
@@ -463,14 +424,11 @@ n      exact         FEM      error
 18:  4.50000000   4.91666221   9.26%
 19:  4.50000000   4.92487984   9.44%
 Solution saved to mesh.vtk
-
 \end{lstlisting}
 
-\subsection{2D: Oscillator}
+\subsection{3D: Hydrogen Atom}
 
 \begin{lstlisting}
-hydrogen
-
 $ ./schroedinger.py --hydrogen
 Dimension: 3
 sfepy: left over: ['tau', 'n_eigs', 'mesh', 'quadr', 'dim', 'base_approx']
