--- a/results.tex
+++ b/results.tex
@@ -487,3 +487,45 @@ Solution saved to mesh.vtk
 \end{lstlisting}
 
 \section{Density Functional Theory, Spherically Symmetric Solution}
+
+\subsection{Pb: LDA}
+
+\begin{lstlisting}
+0: |F(x)|=32381.03274296
+1: |F(x)|=5347.06647460
+2: |F(x)|=2283.82989218
+3: |F(x)|=148.26174998
+4: |F(x)|=120.78098800
+5: |F(x)|=84.68248231
+6: |F(x)|=11.30008638
+7: |F(x)|=3.65004163
+8: |F(x)|=3.12545615
+9: |F(x)|=1.44414848
+10: |F(x)|=0.32879840
+11: |F(x)|=0.10891716
+12: |F(x)|=0.03456829
+13: |F(x)|=0.01240870
+14: |F(x)|=0.00774382
+15: |F(x)|=0.00302906
+16: |F(x)|=0.00081825
+17: |F(x)|=0.00026270
+18: |F(x)|=0.00007814
+19: |F(x)|=0.00003516
+1s( 2) j=l+1/2: -2901.078061
+2s( 2) j=l+1/2: -488.8433352
+2p( 6) j=l+1/2: -470.8777849
+3s( 2) j=l+1/2: -116.526852
+3p( 6) j=l+1/2: -107.950391
+3d(10) j=l+1/2: -91.88992429
+4s( 2) j=l+1/2: -25.75333021
+4p( 6) j=l+1/2: -21.99056413
+4d(10) j=l+1/2: -15.03002657
+4f(14) j=l+1/2: -5.592531664
+5s( 2) j=l+1/2: -4.206797624
+5p( 6) j=l+1/2: -2.941656967
+5d(10) j=l+1/2: -0.9023926829
+6s( 2) j=l+1/2: -0.3571868295
+6p( 2) j=l+1/2: -0.1418313263
+\end{lstlisting}
+
+This is agrees with the NIST reference calculation to all decimal digits.
