--- a/results.tex
+++ b/results.tex
@@ -529,3 +529,55 @@ Solution saved to mesh.vtk
 \end{lstlisting}
 
 This is agrees with the NIST reference calculation to all decimal digits.
+
+\subsection{Pb: RLDA}
+
+\begin{lstlisting}
+0: |F(x)|=41056.67822797
+1: |F(x)|=7926.04357205
+2: |F(x)|=2858.46358638
+3: |F(x)|=598.63802038
+4: |F(x)|=268.50208068
+5: |F(x)|=30.05744371
+6: |F(x)|=27.56292000
+7: |F(x)|=11.22084649
+8: |F(x)|=4.78645898
+9: |F(x)|=0.53300950
+10: |F(x)|=0.13956963
+11: |F(x)|=0.07821891
+12: |F(x)|=0.06505839
+13: |F(x)|=0.02021479
+14: |F(x)|=0.00240256
+15: |F(x)|=0.00132181
+16: |F(x)|=0.00079552
+17: |F(x)|=0.00018579
+18: |F(x)|=0.00000838
+19: |F(x)|=0.00000584
+1s( 2) j=l+1/2: -3209.51946
+2s( 2) j=l+1/2: -574.1825655
+2p( 6) j=l-1/2: -551.7234408
+2p( 6) j=l+1/2: -472.3716103
+3s( 2) j=l+1/2: -137.8642241
+3p( 6) j=l-1/2: -127.6789451
+3p( 6) j=l+1/2: -109.9540395
+3d(10) j=l-1/2: -93.15817605
+3d(10) j=l+1/2: -89.36399096
+4s( 2) j=l+1/2: -31.15015728
+4p( 6) j=l-1/2: -26.73281564
+4p( 6) j=l+1/2: -22.38230707
+4d(10) j=l-1/2: -15.1647618
+4d(10) j=l+1/2: -14.3484973
+5s( 2) j=l+1/2: -5.225938506
+4f(14) j=l-1/2: -4.960490099
+4f(14) j=l+1/2: -4.775660273
+5p( 6) j=l-1/2: -3.710458943
+5p( 6) j=l+1/2: -2.889127431
+5d(10) j=l-1/2: -0.8020049565
+5d(10) j=l+1/2: -0.7070299184
+6s( 2) j=l+1/2: -0.4209603386
+6p( 2) j=l-1/2: -0.1549640727
+\end{lstlisting}
+
+This is agrees within $12\%$ to the NIST reference calculation, the difference
+being caused probably by a different exchange and correlation potential
+approximation in our code in NIST.
