Use a bibliography managed by bibtex.

--- a/master.tex
+++ b/master.tex
@@ -152,11 +152,8 @@ e-mail vedoucího: vackar@fzu.cz\\
 %%% Literatura se řadí abecedně. Úvádí se pouze literatura, na kterou se v textu odkazuje.
 %%% Při odkazu na knihu se vždy uvádějí čísla stránek.
 
-\begin{thebibliography}{99}
-\addcontentsline{toc}{chapter}{References}
- \bibitem{abraham-marsden}Abraham R., Marsden J. E.: {\em Foundations of Mechanics}, Addison-Wesley, Reading, 1985.
- \bibitem{derbes}Derbes D.: {\em Reinventing the wheel: Hodographic solutions to the Kepler problems}, Am. J. Phys. {\bf 69} (2001) 481--489.
- \bibitem{kvasnica}Kvasnica J.: {\em Teorie elektromagnetického pole}, Academia, Praha, 1985.
-\end{thebibliography}
+\bibliographystyle{plain}
+\bibliography{master}
+
 
 \end{document}
